--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-firebaseui": "^5.0.2",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "7.30.0",
